# pi-in-the-sky

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
client/: README.md  package-lock.json  package.json  vite.config.ts
client/src/lib/: api.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/photographs/[id]/: +page.svelte
src/pisky/: __init__.py  camera.py  cli.py  database.py  detector.py  paths.py  server.py
