[project]
name = "pisky"
version = "0.1.0"
description = "Bird detection for Raspberry Pi using on-device inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "tensorflow>=2.20.0",
]

[project.scripts]
pisky = "pisky.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pisky"]
