[project]
name = "pisky"
version = "0.1.0"
description = "Bird detection for Raspberry Pi using on-device inference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "loguru>=0.7.3",
    "numpy>=1.23.0,<2; sys_platform == 'linux'",
    "numpy>=1.23.0; sys_platform != 'linux'",
    "opencv-python>=4.5.0",
    "tflite-runtime>=2.14.0; sys_platform == 'linux'",
    "tensorflow>=2.14.0; sys_platform != 'linux'",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.39.0",
]

[project.scripts]
pisky = "pisky.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pisky"]
